# form-filler

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLI_REFERENCE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: CLI_REFERENCE.md
scripts/: disable_tracking.sh  full-lint.sh  install_hooks.sh  run_lint.sh  setup_gitleaks_config.sh
src/: demo.py  form_filler.py
src/form_filler/: __init__.py  __main__.py  batch_processor.py  document_processor.py
src/form_filler/agents/: __init__.py  agent_factory.py
src/form_filler/ai_providers/: __init__.py  anthropic_provider.py  base_provider.py  deepseek_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py
src/form_filler/batch/: __init__.py  batch_cli.py
src/form_filler/cli/: __init__.py  __main__.py  cli_commands.py  entry_point.py
src/form_filler/crew/: __init__.py  document_processing_crew.py
src/form_filler/models/: __init__.py  processing_result.py
src/form_filler/tools/: __init__.py  document_extraction_tool.py  form_analysis_tool.py  form_filling_tool.py  translation_tool.py
src/form_filler/utils/: __init__.py  file_utils.py  logging_utils.py  progress_utils.py  telemetry_blocker.py
src/streamlit/: web_interface.py
tests/unit/ai_providers/: __init__.py  test_ai_providers.py
tests/unit/cli/: test_cli_commands.py
tests/unit/tools/: test_document_extraction_tool.py  test_form_analysis_tool.py  test_form_filling_tool.py  test_translation_tool.py
